removing link icons

--- a/members.html
+++ b/members.html
@@ -263,11 +263,11 @@
                                 <h5>Randika Udayanga</h5>
                                 <p class="text-primary mb-1">Event Cordinator</p>
                                 
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -281,11 +281,11 @@
                             <div class="p-4">
                                 <h5>Pramodha Vikum</h5>
                                 <p class="text-primary mb-1">Assistant Event Coordinator</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -297,11 +297,11 @@
                             <div class="p-4">
                                 <h5>Navod Sankalpa</h5>
                                 <p class="text-primary mb-1">Finance & Budget Coordinator</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -315,11 +315,11 @@
                             <div class="p-4">
                                 <h5>Janidu Senarathna</h5>
                                 <p class="text-primary mb-1">Technical Team Lead</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -330,11 +330,11 @@
                             <div class="p-4">
                                 <h5>Sanjana Jayarathne</h5>
                                 <p class="text-primary mb-1">Creative & Media Team Lead</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -345,11 +345,11 @@
                             <div class="p-4">   
                                 <h5>Chathura Jayamal</h5>
                                 <p class="text-primary mb-1">PR & Social Media Lead</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -363,11 +363,11 @@
                             <div class="p-4">
                                 <h5>Nivisadi<br> De Silva</h5>
                                 <p class="text-primary mb-1">Documentation Lead</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -378,11 +378,11 @@
                             <div class="p-4">
                                 <h5>Heshani <br> Sharala</h5>
                                 <p class="text-primary mb-1">Content & Script Lead</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -393,11 +393,11 @@
                             <div class="p-4">
                                 <h5>Ahinsa <br> Madushika</h5>
                                 <p class="text-primary mb-1">Dancing Coordinator</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -408,11 +408,11 @@
                             <div class="p-4">
                                 <h5>Shenal <br>Chanaka</h5>
                                 <p class="text-primary mb-1">Singing Coordinator</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -423,11 +423,11 @@
                             <div class="p-4">
                                 <h5>Dilhara <br> Sewwandi</h5>
                                 <p class="text-primary mb-1">Art & Craft Coordinator</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -440,11 +440,11 @@
                             <div class="p-4">
                                 <h5>Akindu <br> Dulwan</h5>
                                 <p class="text-primary mb-1">Drama Coordinator</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -455,11 +455,11 @@
                             <div class="p-4">
                                 <h5>Gayangi <br> Kaveesha</h5>
                                 <p class="text-primary mb-1">Announcing Coordinator</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -470,11 +470,11 @@
                             <div class="p-4">
                                 <h5>Krishnamoorthi <br> Krishani</h5>
                                 <p class="text-primary mb-1">Commitee Member</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -485,11 +485,11 @@
                             <div class="p-4">
                                 <h5>Sulani <br>Nawodya</h5>
                                 <p class="text-primary mb-1">Commitee Member</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -500,11 +500,11 @@
                             <div class="p-4">
                                 <h5>Isuri <br>Amanda</h5>
                                 <p class="text-primary mb-1">Commitee Member</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -517,11 +517,11 @@
                             <div class="p-4">
                                 <h5>Dilmini <br> Anjalika</h5>
                                 <p class="text-primary mb-1">Commitee Member</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -532,11 +532,11 @@
                             <div class="p-4">
                                 <h5>Chathunika <br>Jayamini</h5>
                                 <p class="text-primary mb-1">Commitee Member</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -547,11 +547,11 @@
                             <div class="p-4">
                                 <h5>Akindu <br> Thisen</h5>
                                 <p class="text-primary mb-1">Commitee Member</p>
-                                <div class="d-flex">
+                                <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
                                     <a href="#" class="text-dark me-3"><i class="fab fa-linkedin"></i></a>
                                     <a href="#" class="text-dark"><i class="fas fa-globe"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
