correction of krishani's name

--- a/members.html
+++ b/members.html
@@ -468,7 +468,7 @@
                         <div class="speaker-card ">
                             <img src="assets\img\Org\ASB_2024_116 - Krishnamoorthi Krishani.png" alt="Male business leader in a smart casual outfit gesturing during a presentation" class="img-fluid">
                             <div class="p-4">
-                                <h5>Krishnamoorthi <br> Krishanii</h5>
+                                <h5>Krishnamoorthi <br> Krishani</h5>
                                 <p class="text-primary mb-1">Commitee Member</p>
                                 <!-- <div class="d-flex">
                                     <a href="#" class="text-dark me-3"><i class="fab fa-twitter"></i></a>
