--- a/about.html
+++ b/about.html
@@ -793,20 +793,52 @@
         </div>
     </section>
 
-    <footer class="site-footer text-gray-300 py-12">
-        <div class="container mx-auto px-6 text-center">
-            <p class="mb-2">Organizing Committee, INSPIRA'25</p>
-            <p class="mb-2">Email: <a href="mailto:info@inspira2025.online"
-                    class="hover:text-orange-400">info@inspira2025.online</a></p>
-            <p>Phone: <a href="tel:+94727688334" class="hover:text-orange-400">+94 (72) 768-8334</a> (Event Cordinator)
-            </p>
-            <div class="mt-6 border-t border-gray-700 pt-6">
-                <p>&copy; inspira'25. All Rights Reserved.</p>
-                <p><small>Developed By <a href="developers.html" style="text-decoration: underline; color: yellow;">Team
-                            INSPIRA</a></small></p>
-            </div>
-        </div>
-    </footer>
+     <footer class="text-gray-300 py-12 bg-[#541C1C]/50 border-t border-white/10">
+  <div class="container mx-auto px-6 text-center">
+    <h3 class="text-2xl font-bold mb-4 text-white">Contact Us</h3>
+    <p class="mb-2">Organizing Committee, INSPIRA'25</p>
+    <p class="mb-2">
+      Email: 
+      <a href="mailto:info@inspira.com" class="hover:text-orange-400">
+        info@inspira2025.online
+      </a>
+    </p>
+    <p>
+      Phone: 
+      <a href="tel:+94727688334" class="hover:text-orange-400">
+        +94 (72) 768-8334
+      </a>
+    </p>
+
+    <!-- Follow Us Section -->
+      <div class="mt-8">
+      <h4 class="text-xl font-semibold mb-4 text-white">Follow Us</h4>
+      <div class="flex justify-center space-x-6">
+        <a href="https://facebook.com" target="_blank" class="text-white hover:text-orange-400 text-3xl">
+          <i class="bi bi-facebook"></i>
+        </a>
+        <a href="https://youtube.com" target="_blank" class="text-white hover:text-orange-400 text-3xl">
+          <i class="bi bi-youtube"></i>
+        </a>
+        <a href="https://tiktok.com" target="_blank" class="text-white hover:text-orange-400 text-3xl">
+          <i class="bi bi-tiktok"></i>
+        </a>
+      </div>
+    </div>
+
+    <div class="mt-6 border-t border-gray-700 pt-6">
+      <p>&copy; inspira'25. All Rights Reserved.</p>
+      <p>
+        <small>
+          Developed By 
+          <a href="developers.html" style="text-decoration: underline; color: yellow;">
+            Team INSPIRA
+          </a>
+        </small>
+      </p>
+    </div>
+  </div>
+</footer>
     <canvas id="interactiveCanvas" class="fixed top-0 left-0 w-full h-full pointer-events-none z-0"></canvas>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
