update ticket and schedule links to point to update.html

--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@
             <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
                 <a href="index.html" class="nav-link font-semibold text-orange-400 hover:text-white transition">Home</a>
                 <a href="about.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">About</a>
-                <a href="ticket.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
-                <a href="#" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
+                <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
+                <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
             </nav>
         </div>
 
