--- a/about.html
+++ b/about.html
@@ -497,8 +497,8 @@
         <nav id="nav-menu-mobile" class="sm:hidden hidden px-6 pb-4 space-y-2 rounded-b-2xl">
             <a href="index.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Home</a>
             <a href="about.html" class="block py-2 font-semibold text-orange-400 hover:text-white transition">About</a>
-            <a href="ticket.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
-            <a href="#" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Schedule</a>
+            <a href="update.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
+            <a href="update.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Schedule</a>
         </nav>
     </header>
     
