add the social links and nav

--- a/members.html
+++ b/members.html
@@ -616,16 +616,16 @@
     </p>
 
     <!-- Follow Us Section -->
-      <div class="mt-8">
+     <div class="mt-8">
       <h4 class="text-xl font-semibold mb-4 text-white">Follow Us</h4>
       <div class="flex justify-center space-x-6">
-        <a href="https://facebook.com" target="_blank" class="text-white hover:text-orange-400 text-3xl">
+        <a href="https://www.facebook.com/share/1BM1aC6r9s/" target="_blank" class="text-white hover:text-orange-400 text-3xl">
           <i class="bi bi-facebook"></i>
         </a>
-        <a href="https://youtube.com" target="_blank" class="text-white hover:text-orange-400 text-3xl">
+        <a href="https://www.youtube.com/@RUSLFAS2024" target="_blank" class="text-white hover:text-orange-400 text-3xl">
           <i class="bi bi-youtube"></i>
         </a>
-        <a href="https://tiktok.com" target="_blank" class="text-white hover:text-orange-400 text-3xl">
+        <a href="https://www.tiktok.com/@ruslfas2024" target="_blank" class="text-white hover:text-orange-400 text-3xl">
           <i class="bi bi-tiktok"></i>
         </a>
       </div>
