--- a/ticket.html
+++ b/ticket.html
@@ -56,19 +56,20 @@
                 </svg>
             </button>
 
+           
             <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
-                <a href="index.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Home</a>
+                <a href="index.html" class="nav-link font-semibold text-orange-400 hover:text-white transition">Home</a>
                 <a href="about.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">About</a>
-                <a href="ticket.html" class="nav-link font-semibold text-orange-400 hover:text-white transition">Get Ticket</a>
-                <a href="#" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
+                <a href="ticket.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
+                <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
             </nav>
         </div>
 
         <nav id="nav-menu-mobile" class="sm:hidden hidden px-6 pb-4 space-y-2 rounded-b-2xl">
-            <a href="index.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Home</a>
+            <a href="index.html" class="block py-2 font-semibold text-orange-400 hover:text-white transition">Home</a>
             <a href="about.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">About</a>
-            <a href="ticket.html" class="block py-2 font-semibold text-orange-400 hover:text-white transition">Get Ticket</a>
-            <a href="#" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Schedule</a>
+            <a href="ticket.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
+            <a href="update.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Schedule</a>
         </nav>
     </header>
 
@@ -172,13 +173,13 @@
       <div class="mt-8">
       <h4 class="text-xl font-semibold mb-4 text-white">Follow Us</h4>
       <div class="flex justify-center space-x-6">
-        <a href="https://facebook.com" target="_blank" class="text-white hover:text-orange-400 text-3xl">
+        <a href="https://www.facebook.com/share/1BM1aC6r9s/" target="_blank" class="text-white hover:text-orange-400 text-3xl">
           <i class="bi bi-facebook"></i>
         </a>
-        <a href="https://youtube.com" target="_blank" class="text-white hover:text-orange-400 text-3xl">
+        <a href="https://www.youtube.com/@RUSLFAS2024" target="_blank" class="text-white hover:text-orange-400 text-3xl">
           <i class="bi bi-youtube"></i>
         </a>
-        <a href="https://tiktok.com" target="_blank" class="text-white hover:text-orange-400 text-3xl">
+        <a href="https://www.tiktok.com/@ruslfas2024" target="_blank" class="text-white hover:text-orange-400 text-3xl">
           <i class="bi bi-tiktok"></i>
         </a>
       </div>
