--- a/testnav.html
+++ b/testnav.html
@@ -321,21 +321,21 @@
     </button>
 
     <!-- Desktop Navigation -->
-    <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
-      <a href="index.html" class="nav-link font-semibold text-orange-400 hover:text-white transition">Home</a>
-      <a href="about.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">About</a>
-      <a href="ticket.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
-      <a href="#" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
-    </nav>
-  </div>
+    
+            <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
+                <a href="index.html" class="nav-link font-semibold text-orange-400 hover:text-white transition">Home</a>
+                <a href="about.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">About</a>
+                <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
+                <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
+            </nav>
+        </div>
 
-  <!-- Mobile Navigation -->
-  <nav id="nav-menu-mobile" class="sm:hidden hidden px-6 pb-4 space-y-2 bg-primary-800/50 backdrop-blur-md border-t border-white/10 rounded-b-lg">
-    <a href="index.html" class="block font-semibold text-orange-400 hover:text-white transition">Home</a>
-    <a href="about.html" class="block font-semibold text-white hover:text-orange-400 transition">About</a>
-    <a href="ticket.html" class="block font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
-    <a href="#" class="block font-semibold text-white hover:text-orange-400 transition">Schedule</a>
-  </nav>
+        <nav id="nav-menu-mobile" class="sm:hidden hidden px-6 pb-4 space-y-2 rounded-b-2xl">
+            <a href="index.html" class="block py-2 font-semibold text-orange-400 hover:text-white transition">Home</a>
+            <a href="about.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">About</a>
+            <a href="update.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
+            <a href="update.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Schedule</a>
+        </nav>
 </header>
 
 
