--- a/index.html
+++ b/index.html
@@ -234,11 +234,7 @@
             <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
                 <a href="index.html" class="nav-link font-semibold text-orange-400 hover:text-white transition">Home</a>
                 <a href="about.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">About</a>
-<<<<<<< Updated upstream
                 <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
-=======
-                <a href="ticket.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
->>>>>>> Stashed changes
                 <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
             </nav>
         </div>
@@ -246,7 +242,7 @@
         <nav id="nav-menu-mobile" class="sm:hidden hidden px-6 pb-4 space-y-2 rounded-b-2xl">
             <a href="index.html" class="block py-2 font-semibold text-orange-400 hover:text-white transition">Home</a>
             <a href="about.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">About</a>
-            <a href="ticket.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
+            <a href="update.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
             <a href="update.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Schedule</a>
         </nav>
     </header>
