--- a/about.html
+++ b/about.html
@@ -562,9 +562,10 @@
     <section class="py-5 ">
         <h1 class="text-center section-title">Event Schedule</h1>
 <div class="d-flex justify-content-center my-4">
-  <button type="button" class="btn btn-outline-warning btn-lg rounded-pill" data-bs-toggle="modal" data-bs-target="#exampleModalLong">
+  <!-- <button type="button" class="btn btn-outline-warning btn-lg rounded-pill" data-bs-toggle="modal" data-bs-target="#exampleModalLong">
     View Event Schedule
-  </button>
+  </button> -->
+<a href="update.html" class="btn btn-outline-warning btn-lg rounded-pill px-4">View Event Schedule</a>
 </div>
 
 <div class="modal fade  " id="exampleModalLong" tabindex="-1" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
