--- a/developers.html
+++ b/developers.html
@@ -313,7 +313,7 @@
             </button>
 
             <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
-                <a href="index.html" class="nav-link font-semibold text-orange-400 hover:text-white transition">Home</a>
+                <a href="index.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Home</a>
                 <a href="about.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">About</a>
                 <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
                 <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
@@ -321,10 +321,10 @@
         </div>
 
         <nav id="nav-menu-mobile" class="sm:hidden hidden bg-[#541C1C]/60 backdrop-blur-lg px-6 pb-4 space-y-2 rounded-b-2xl">
-            <a href="index.html" class="block py-2 font-semibold text-orange-400 hover:text-white transition">Home</a>
+            <a href="index.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Home</a>
             <a href="about.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">About</a>
-            <a href="ticket.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
-            <a href="#" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Schedule</a>
+            <a href="update.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
+            <a href="update.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Schedule</a>
         </nav>
     </header>
     <main>
