--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             </div>
             
             <div class="mt-8">
-                <a href="ticket.html" target="_self" class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
+                <a href="update.html" target="_self" class="glow-button flex items-center gap-2 btn-zoom text-white font-bold py-2 px-5 rounded-full">
                 <i class="bi bi-ticket-detailed-fill"></i>
                 <p>Get Your Ticket</p>
                 </a>
