--- a/about.html
+++ b/about.html
@@ -488,16 +488,16 @@
 
           
          <nav id="nav-menu" class="hidden sm:flex space-x-8 items-center">
-                <a href="index.html" class="nav-link font-semibold text-orange-400 hover:text-white transition">Home</a>
-                <a href="about.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">About</a>
+                <a href="index.html" class="nav-link font-semibold text-white-400 hover:text-white transition">Home</a>
+                <a href="about.html" class="nav-link font-semibold text-orange hover:text-orange-400 transition">About</a>
                 <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
                 <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
             </nav>
         </div>
 
         <nav id="nav-menu-mobile" class="sm:hidden hidden px-6 pb-4 space-y-2 rounded-b-2xl">
-            <a href="index.html" class="block py-2 font-semibold text-orange-400 hover:text-white transition">Home</a>
-            <a href="about.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">About</a>
+            <a href="index.html" class="block py-2 font-semibold text-white-400 hover:text-white transition">Home</a>
+            <a href="about.html" class="block py-2 font-semibold text-orange hover:text-orange-400 transition">About</a>
             <a href="update.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
             <a href="update.html" class="block py-2 font-semibold text-white hover:text-orange-400 transition">Schedule</a>
         </nav>
