undo linking the zoomDP web

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 <a href="index.html" class="nav-link font-semibold text-orange-400 hover:text-white transition">Home</a>
                 <a href="about.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">About</a>
                 <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Get Ticket</a>
-                <a href="studentDP.php" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
+                <a href="update.html" class="nav-link font-semibold text-white hover:text-orange-400 transition">Schedule</a>
             </nav>
         </div>
 
